Added JWT Authentication

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI="mongodb://host.docker.internal:27017"
+MONGO_URI="mongodb://localhost:27017"
 PORT=6600
+JWT_SECRET="cdhvkhg&#&BLJDS@<ahHS(@HCBDVKbbd47837c&"
